# ShapeMatchingPlugin

./: Authors.txt  CMakeLists.txt  README.md  ShapeMatchingPluginConfig.cmake.in  SofaMiscForcefieldDev-dependencies.prf  SofaMiscForcefieldDev.pro  SofaMiscForcefieldDev.txt  SofaMiscForcefieldDevConfig.cmake.in  main.cpp
.github/workflows/: ci.yml
examples/: ConstraintRotationFinder.scn  RotationFinder.scn  ShapeMatchingForceField.scn
sofa/component/: initMiscForcefieldDev.cpp  initMiscForcefieldDev.h
sofa/component/container/: ShapeMatchingRotationFinder.cpp  ShapeMatchingRotationFinder.h  ShapeMatchingRotationFinder.inl
sofa/component/controller/: EvolutionParameterController.cpp  EvolutionParameterController.h  EvolutionParameterController.inl
sofa/component/forcefield/: Mapped3DoFForceField.cpp  Mapped3DoFForceField.h  Mapped3DoFForceField.inl  MappedBeamToTetraForceField.cpp  MappedBeamToTetraForceField.h  MappedBeamToTetraForceField.inl  ShapeMatchingForceField.cpp  ShapeMatchingForceField.h  ShapeMatchingForceField.inl
src/ShapeMatchingPlugin/: ShapeMatchingForceField.cpp  ShapeMatchingForceField.h  ShapeMatchingForceField.inl  ShapeMatchingRotationFinder.cpp  ShapeMatchingRotationFinder.h  ShapeMatchingRotationFinder.inl  config.h.in  initShapeMatchingPlugin.cpp  initShapeMatchingPlugin.h  polar_decomposition_3x3_impl.h
